# ImGui_Template

./: CMakeLists.txt  README.md
dependencies/imgui/: imgui.cpp  imgui_demo.cpp
src/: DebugConsole.cpp  DebugConsole.h  GUI.cpp  GUI.h  Globals.cpp  Globals.h  Window.cpp  Window.h  main.cpp
